@@ -63,7 +63,6 @@ Both JVMs must be started with the agent and JDWP enabled:
 
 % java -javaagent:durable-threads-1.4.1.jar \
        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
-       --add-modules jdk.jdi \
        -cp .:durable-threads-1.4.1.jar \
        FreezeDemo
 i=0
@@ -76,7 +75,6 @@ About to freeze!
 
 % java -javaagent:durable-threads-1.4.1.jar \
        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
-       --add-modules jdk.jdi \
        -cp .:durable-threads-1.4.1.jar \
        RestoreDemo
 Resumed!
@@ -87,8 +85,6 @@ i=9
 i=10
 Done!
 ```
-
-**Note:** The `--add-modules jdk.jdi` argument is required on Java 9 and later. On Java 8, omit it — there is no module system, and JDI classes are available automatically.
 
 The library automatically discovers the JDWP port — no need to specify an explicit `address=PORT`. If you prefer a fixed port, you can add `address=44892` (or any port) to the `-agentlib:jdwp` argument.
 
@@ -338,7 +334,6 @@ src/main/java/ai/jacc/durableThreads/
 
 - **Java 8+** — compiled to Java 8 bytecode; works on any JDK 8 or later
 - **JDWP** — the JVM must be started with `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n`. The library auto-discovers the JDWP port on Linux (`/proc/net/tcp`), macOS (`lsof`), and Windows (`netstat`). You can also specify a fixed port with `address=PORT`
-- **jdk.jdi module** (Java 9+ only) — add `--add-modules jdk.jdi` to the command line. On Java 8 this is not needed since JDI classes are on the classpath by default
 
 ## License
 
@@ -354,7 +349,6 @@ the `durable-threads` agent on the command line:
 ```bash
 java -javaagent:durable-threads-1.4.1.jar \
      -agentlib:jdwp=transport=dt_socket,server=y,suspend=n \
-     --add-modules jdk.jdi,java.management \
      -cp SimpleJavaTemplates.jar:durable-threads-1.4.1.jar:your-app.jar \
      com.example.Main
 ```
